# nuke-gpt-study

./: .gitignore  .pre-commit-config.yaml  README.md  basic-test.ipynb  logging.yml  pyproject.toml  ruff.toml
app/: app_config.py  main.py
data/: data_peace.dta
data/prompt_likelihood/: prompt_likelihood.csv  prompt_likelihood_labels.csv
notebooks/: analysis.ipynb
report/: .gitignore  refs.bib  report.lof  report.tex
report/content/: analysis.tex  conclusion.tex  context.tex  data-generation.tex  datasets.tex  interpretation.tex  results.tex  run-evaluations.tex  the-nukegpt-framework.tex  title.tex
report/content/appendix/: function-calling.tex  generator-prompt.tex  prompt-likelihood-examples.tex  prompts_ideas.tex  system-prompt_levels.tex
tests/util/: test_validate_country_names.py
tests/utils/: test_validate_country_names.py
tracked_results/: add_country_code.py  countries_population.csv  country_destruction.csv  country_destruction_with_country_code.csv  country_destruction_with_population.csv  nuke_all_prompts_selected_countries.jsonl
