[tool.poetry]
name = "nuke-gpt-study"
version = "0.1.0"
description = ""
authors = ["Samuel Mallet  <69467005+SuperMuel@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "library" }
]

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.7"
langchain-openai = "^0.2.6"
langchain-anthropic = "^0.2.4"
langchain-groq = "^0.2.1"
langchain-community = "^0.3.5"
country-converter = "^1.2"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.2"
ipykernel = "^6.29.5"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
