[tool.poetry]
name = "nuke-gpt-study"
version = "0.1.0"
description = ""
authors = ["Samuel Mallet  <69467005+SuperMuel@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "app", from = "." },
    { include = "library", from = "." }
]

[tool.poetry.scripts]
nuke-gpt-study = "app.main:main"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.7"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
langchain-openai = "^0.2.6"
rich = "^13.9.4"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
